<resources>
    <string name="app_name">Cov Aid BD</string>
    <string name="infected_text">Infected</string>
    <string name="cured_text">Cured</string>
    <string name="dead_text">Dead</string>
    <string name="latest_news_text">Parental Tips</string>
    <string name="learn_about_parenting_during_this_situation">Learn About Parenting During This Situation</string>
    <string name="are_you_infected_text">Are you infected ?</string>
    <string name="take_a_health_survey_text">Take health tips</string>
    <string name="total_cases_str">Total Cases</string>
    <string name="todays_cases_str">Todays Cases</string>
    <string name="deaths_str">Deaths</string>
    <string name="todays_deaths_str">Todays Deaths</string>
    <string name="recovered_str">Recovered</string>
    <string name="active_cases_str">Active Cases</string>
    <string name="total_tests_str">Total Tests</string>
    <string name="cases_million_str">Cases/Million</string>
    <string name="deaths_million_str">Deaths/Million</string>
    <string name="tests_million_str">Tests/Million</string>
    <string name="app_settings_str">App Settings</string>
    <string name="about_corona">About Corona</string>
    <string name="a_product_of_swad_express_str">A Product Of SWAD EXPRESS</string>
    <string name="dialog_permission_title">Permission Needed</string>
    <string name="dialog_permission_body">For calling from the app this permission is needed</string>
    <string name="dialog_permission_ok">OK Grant</string>
    <string name="dialog_permission_no">No Leave It</string>
    <string name="dialog_internet_connection_title">No Internet ..... :(</string>
    <string name="dialog_internet_connection_body">Your device has no internet connection available.So the app wont be able to collect data from internet....</string>
    <string name="dialog_internet_connection_load_no_internet">Load App Without Internet</string>
    <string name="dialog_internet_connection_exit">OK, Exit App</string>
    <string name="help_lines_str">  Help Lines (BD)  📞 </string>
    <string name="hotline_n_333_str">HotLine \n  333 </string>
    <string name="national_call_center_n_16263_str">National Call Center \n 16263 </string>
    <string name="health_portal_n_10655_str">Health Portal \n 10655 </string>
    <string name="iedcr_n_09611677777_str">IEDCR \n 09611677777 </string>
    <string name="specialist_health_line_n_109_str">Specialist Health Line \n 109 </string>
    <string name="how_to_put_on_a_mask_title">How To Put On A Mask</string>
    <string name="how_to_put_on_a_mask_1">Before putting on a mask, wash hands with alcohol-based
        hand rub or soap and water</string>
    <string name="how_to_put_on_a_mask_2">Cover mouth and nose with mask and make sure there
        are no gaps between your face and the mask Avoid touching the mask while using it; if you do,
        clean your handswith alcohol-based hand rub or soap and water</string>
    <string name="how_to_put_on_a_mask_3">Replace the mask with a new one as soon as it is damp
        and do not re-use single-use masks3</string>
    <string name="how_to_put_on_a_mask_4">To remove the mask: remove it from behind
        (do not touch the front of mask); discard immediately in a closed bin;
        wash hands with alcoholbased hand rub or soap and water</string>
    <string name="child_aware_heading">Parenting - How to stay positive</string>
    <string name="child_aware_body_1">It‘s hard to feel positive when our kids or teenagers are driving us crazy.
        We often end up saying “Stop doing that!” But children are much more likely to do
        what we ask if we give them positive instructions and lots of praise for what they
        do right.Say the behaviour you want to see. \n\n

        Use positive words when telling your child what to do; like ‘Please put your clothes away’
        (instead of ‘Don’t make a mess’\n\n

        Praise your child when they are behaving well\n
        Try praising your child or teenager for something they have done well.
        They may not show it, but you’ll see them doing that good thing again.
        It will also reassure them that you notice and care.\n\n

        It’s all in the delivery\n
        Shouting at your child will just make you and them more stressed
        and angrier. Get your child’s attention by using their name.\n
        Speak in a calm voice.</string>
    <string name="child_aware_body_2">
        Get real\n
        Can your child actually do what you are asking them?
        It is very hard for a child to keep quiet inside for a
        whole day but maybe they can keep quiet for 15 minutes while you are on a call.\n\n

        Help your teen stay connected\n
        Teens especially need to be able to communicate with their friends.
        Help your teen connect through social media and other safe distancing ways.
        This is something you can do together, too!
    </string>
    <string name="parenting_stay_aware_heading">Parenting - Stay Aware </string>
    <string name="parenting_stay_aware_body_1">Create a flexible but consistent daily routine\n
        Make a schedule for you and your children that has time for structured activities as well as free time.
        This can help children feel more secure and better behaved.
        Children or teenagers can help plan the routine for the day –
        like making a school timetable. Children will follow this better if they help to make it.
        Include exercise in each day  - this helps with stress and kids  with lots of energy at home.
        You are a model for your child’s behavior
        If you practice keeping safe distances and hygiene yourself, and treat others with compassion,
        especially those who are sick or vulnerable – your children and teenagers will learn from you.
    </string>
    <string name="parenting_stay_aware_body_2">Teach your child about keeping safe distances\n
        If it is OK in your country,  get children outside.
        You can also write letters and draw pictures to share with people. Put them up
        outside your home for others to see!
        You can reassure your child by talking about how you are keeping safe. Listen to
        their suggestions and take them seriously.\n\n

        Make handwashing and hygiene fun\n
        Make a 20-second song for washing hands. Add  actions! Give children points and praise
        for regular handwashing.
        Make a game to see how few times we can touch our faces with a reward for the least number
        of touches (you can count for each other).\n\n

        At the end of each day, take a minute to think about the day.  Tell your child about one
        positive  or fun thing they did. Praise yourself for what you did well today.  You are a star!
</string>
    <string name="parenting_keep_calm_heading">Parenting - Stay Calm </string>
    <string name="parenting_keep_calm_body_1">
        COVID-19 PARENTING\n\n

        Keep Calm and Manage Stress\n

        You are not alone\n

        Millions of people have the same fears as us. Find someone who you can talk to about
        how you are feeling. Listen to them. Avoid social media that makes you feel panicked.\n\n

        Take a break\n
        We all need a break sometimes. When your children are asleep, do something fun or relaxing
        for yourself. Make a list of healthy activities that YOU like to do. You deserve it!\n\n

        Listen to your kids\n
        Be open and listen to your children. Your children will look to you for support and reassurance.
        Listen to your children when they share how they are feeling. Accept how they feel and give them comfort.\n\n
</string>
    <string name="parenting_keep_calm_body_2">Take a Pause
        1-minute relaxation activity that you can do whenever you are feeling stressed or worried
        Step 1: Set up •   Find a comfortable sitting position, your feet flat on the floor, your hands resting in your lap. •  Close your eyes if you feel comfortable.
        Step 2: Think, feel, body •  Ask yourself, “What am I thinking now?” •   Notice your thoughts. Notice if they are negative or positive. •   Notice how you feel emotionally. Notice if your feelings are happy or not. •   Notice how your body feels. Notice anything that hurts or is tense.
        Step 3: Focus on your breath •  Listen to your breath as it goes in and out. •   You can put a hand on your stomach and feel it rise and fall with each breath. •   You may want to say to yourself “It’s okay. Whatever it is, I am okay.” •  Then just listen to your breath for a while.
        Step 4: Coming back •   Notice how your whole body feels. •   Listen to the sounds in the room.
        Step 5: Reflecting •  Think ‘do I feel different at all?’. •   When you are ready, open your eyes.

        Taking a Pause can also be helpful when you find your child is irritating you or has done something wrong. It gives you a chance to be calmer. Even a few deep breaths or connecting with the feeling of the floor beneath can make a difference. You can also Take a Pause with your children!
    </string>
    <string name="parenting_talking_cov_heading">Parenting - Talk About COVID-19</string>
    <string name="parenting_talking_cov_body_1">COVID-19 PARENTING
        Talking about COVID-19\n
        Be willing to talk. They will already have heard something. Silence and secrets do not protect our children.
        Honesty and openness do. Think about how much they will understand. You know them best.\n\n

        Be open and listen\n
        Allow your child to talk freely. Ask them open questions and find out how much they already know.\n\n

        Be honest\n
        Always answer their questions truthfully. Think about how old your child is and how much they can understand.
</string>
    <string name="parenting_talking_cov_body_2">Be supportive
        Your child may be scared or confused. Give them space to share how they are feeling and let them know you are there for them.\n\n

        It is OK not to know the answers\n
        It is fine to say “We don’t know, but we are working on it; or we don’t know, ‘but we think’.”  Use this as an opportunity to learn something new with your child!\n\n

        Heroes not bullies\n
        Explain that COVID-19 has nothing to do with the way someone looks, where they are from, or what language they speak.
        Tell your child that we can be compassionate to people who are sick and those who are caring for them.
        Look for stories of people who are working to stop the outbreak and are caring for sick people\n\n
    </string>
    <string name="parenting_safe_on_internet_heading">Parenting - Safe On Internet</string>
</resources>