<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HelpFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/header_text_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_gradient_header"
            android:fontFamily="@font/times_new_roman"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/help_lines_str"
            android:textColor="#FDFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/hotline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"

                android:layout_marginRight="20dp"
                android:background="@drawable/button_background_1"
                android:fontFamily="@font/times_new_roman"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/hotline_n_333_str"
                android:textColor="#FDFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nationalCallCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_background_1"
                android:fontFamily="@font/times_new_roman"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/national_call_center_n_16263_str"
                android:textColor="#FDFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/healthPortal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_background_1"
                android:fontFamily="@font/times_new_roman"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/health_portal_n_10655_str"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/IEDCR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_background_1"
                android:fontFamily="@font/times_new_roman"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/iedcr_n_09611677777_str"
                android:textColor="#FDFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/specialistLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_background_1"
                android:fontFamily="@font/times_new_roman"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/specialist_health_line_n_109_str"
                android:textColor="#FDFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    </LinearLayout>

</FrameLayout>